--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-    <figure class="zero" alt="beautiful view of nature.">Cloud-architect</figure>
+    <figure class="zero" alt="beautiful view of nature.">
         <h2 class="zero-header">Cloud-architect</h2>
     </figure>
     <section class="content">
