--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h1 class="name">Latifah</h1>
         <div class="links">
             <ul>
-                <li><a href=" ">About me</a></li>
-                <li><a href="  ">Work</a></li>
-                <li><a href="  ">Contact Me</a></li>
-                <li><a href="   ">Resume</a></li>
+                <li><a href="#about-me ">About me</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact-header">Contact Me</a></li>
+                <li><a href="#resume">Resume</a></li>
            </ul>
         </div>
     </header>
@@ -35,20 +35,26 @@
 }    
     </style>
     <section class="content">
-        <div class="about-me">
-            <h2 class="about-me-header">About Me</h2>
-            <p>All the thing you should know about mmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
-                mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
-                mmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
-
-                mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmme.
-            </p>
+        <div id="about-me" class="about-me">
+                <h2 class="about-me-header">About Me</h2>
+            <article class="aboutme">
+                <p>All to know about me; My name is Latifah Zawedde born in Uganda, 
+                    Africa on October 8th 2001. I have lived in Los Angeles, California for the past five years and the mmmmmmmmmmmmmmmmmmm
+                    mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
+                    mmmmmmmmmmmmmmmmmmmmmm
+                    
+                    
+                    nmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
+                    mmmmmmmmmmmmmmmmmmmmm
+                </p>
+            </article>
         </div>
 
-        <div class="work">
-                <nav><h2 class="work-header">Work</h2></nav>
+        <div id="work" class="work">
+                <h2 class="work-header">Work</h2>
+            <section class="work-figures">
             <figure class="card1">
-                <img src="./images/pexels-miguel-á-padriñán-3520692.jpg" class="work-1" alt="Someone working on Html."/><a href="   "></a>
+                <img src="./images/pexels-miguel-á-padriñán-3520692.jpg" class="work-1" alt="Someone working on Html."/><a href="./links/google.com"></a>
                 <h3 class="header1">HTML</h3>
                 <h4 class="subheader2">html something</h4>   
             </figure>   
@@ -71,32 +77,31 @@
                 <img src="./images/pexels-marcellino-andrian-671629 (1).jpg" class="work-5" alt="Someone working on Html."/><a href="   "></a>
                 <h3 class="header1">Python</h3>
                 <h4 class="subheader2">Pythonnnnnnn something</h4>    
-            </figure>                     
+            </figure>  
+        </section>                   
         </div>
 
-        <div class="contact">
+        <div  class="contact">
             <h2 id="contact-header">Contact Me</h2>
-            <style> hr   {
-
-            }
-            </style>
-            <ul>
-                <li>
-                    <i>8888888888</i>
-                </li>
-                <li>
-                    <i>wentworth@gmail.com</i>
-                </li>
-                <li>
-                    <i>Githuh</i>
-                </li>
-                <li>
-                    <i>Linkedin</i>
-                </li>
-                <li>
-                    <i>Twitter</i>
-                </li>
-            </ul>
+            <section class="contact-C">
+                <ul>
+                    <li>
+                        <i>8888888888</i>
+                    </li>
+                    <li>
+                        <i>wentworth@gmail.com</i>
+                    </li>
+                    <li>
+                        <i>Githuh</i>
+                    </li>
+                    <li>
+                        <i>Linkedin</i>
+                    </li>
+                    <li>
+                        <i>Twitter</i>
+                    </li>
+                </ul>
+            </section>
         </div>
     </section>
 
