--- a/index.html
+++ b/index.html
@@ -49,33 +49,32 @@
                 </p>
             </article>
         </div>
-
         <div id="work" class="work">
                 <h2 class="work-header">Work</h2>
             <section class="work-figures">
-            <figure class="card1">
-                <img src="./images/pexels-miguel-á-padriñán-3520692.jpg" class="work-1" alt="Someone working on Html."/><a href="./links/google.com"></a>
-                <h3 class="header1">HTML</h3>
+            <figure class="figure card1">
+                <img src="./images/pexels-miguel-á-padriñán-3520692.jpg" class="work-1" alt="Someone working on Html."/><a href="https://github.com/latifah2022/my-first-portfolio">
+                <h3 class="header1">HTML</h3></a>
                 <h4 class="subheader2">html something</h4>   
             </figure>   
-            <figure class="card2">
-                <img src="./images/pexels-martin-lopez-2225618.jpg" class="work-2" alt="Someone working on css."/><a href="   "></a>
-                <h3 class="header1">Css</h3>
+            <figure class="figure card2">
+                <img src="./images/pexels-martin-lopez-2225618.jpg" class="work-2" alt="Someone working on css."/><a href="https://www.canva.com/colors/color-palettes">
+                <h3 class="header1">Css</h3></a>
                 <h4 class="subheader2">cssss something</h4>   
             </figure> 
-            <figure class="card3">
-                <img src="./images/pexels-negative-space-97077.jpg" class="work-3" alt="Someone working on js."/><a href="   "></a>
-                <h3 class="header1">Java Script</h3>
+            <figure class="figure card3">
+                <img src="./images/pexels-negative-space-97077.jpg" class="work-3" alt="Someone working on js."/><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">
+                <h3 class="header1">Java Script</h3></a>
                 <h4 class="subheader2">JSssssss something</h4>   
             </figure> 
-            <figure class="card4">      
-                <img src="./images/pexels-tima-miroshnichenko-5380642.jpg" class="work-4" alt="Someone working on sql."/><a href="   "></a>
-                <h3 class="header1">SQL</h3>
+            <figure class="figure card4">      
+                <img src="./images/pexels-tima-miroshnichenko-5380642.jpg" class="work-4" alt="Someone working on sql."/><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">
+                <h3 class="header1">SQL</h3></a>
                 <h4 class="subheader2">Sqllllllll something</h4>  
                 </figure>
-            <figure class="card5">
-                <img src="./images/pexels-marcellino-andrian-671629 (1).jpg" class="work-5" alt="Someone working on Html."/><a href="   "></a>
-                <h3 class="header1">Python</h3>
+            <figure class="figure card5">
+                <img src="./images/pexels-marcellino-andrian-671629 (1).jpg" class="work-5" alt="Someone working on Html."/><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">
+                <h3 class="header1">Python</h3></a>
                 <h4 class="subheader2">Pythonnnnnnn something</h4>    
             </figure>  
         </section>                   
@@ -86,19 +85,19 @@
             <section class="contact-C">
                 <ul>
                     <li>
-                        <i>8888888888</i>
+                        <a href="8888888888">8888888888</a>
                     </li>
                     <li>
-                        <i>wentworth@gmail.com</i>
+                        <a href="mailto:wentworth@gmail.com">Email</a>
                     </li>
                     <li>
-                        <i>Githuh</i>
+                        <a href="https://github.com/latifah2022/my-first-portfolio">Github</a>
                     </li>
                     <li>
-                        <i>Linkedin</i>
+                        <a href="https://www.linkedin.com/mynetwork/">Linkedin</a>
                     </li>
                     <li>
-                        <i>Twitter</i>
+                        <a href="https://twitter.com/">Twitter</a>
                     </li>
                 </ul>
             </section>
