--- a/index.html
+++ b/index.html
@@ -17,35 +17,25 @@
                 <li><a href="#about-me ">About me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact-header">Contact Me</a></li>
-                <li><a href="#resume">Resume</a></li>
            </ul>
         </div>
     </header>
 
     <figure class="zero" alt="beautiful view of nature.">
         <h2 class="zero-header">Cloud-architect</h2>
+        <img src="./images/my pic.jpg" class="my-pic" alt="Picture of me"/>
     </figure>
-    <style> hr {display: contents;
-        margin-top:1em;
-        margin-bottom: 1em;
-        margin-left: 2em;
-        margin-right: 2em;
-        border-width: 2px0;
-        align-items: flex-end;
-}    
-    </style>
     <section class="content">
         <div id="about-me" class="about-me">
                 <h2 class="about-me-header">About Me</h2>
             <article class="aboutme">
                 <p>All to know about me; My name is Latifah Zawedde born in Uganda, 
-                    Africa on October 8th 2001. I have lived in Los Angeles, California for the past five years and the mmmmmmmmmmmmmmmmmmm
-                    mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
-                    mmmmmmmmmmmmmmmmmmmmmm
-                    
-                    
-                    nmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
-                    mmmmmmmmmmmmmmmmmmmmm
+                    Africa on October 8th 2001. I have lived in Los Angeles, California for the past five years
+                     and I love it here so much.
+                    I love movies, swimming, late night drive. I recently got into coding and i haven't looked back since.
+                    I am loving the next step am taking in my life.
+
+                    I am a cloud architect who is also fluent in the following languages; Java Script  and Python. I also have project management skils.
                 </p>
             </article>
         </div>
@@ -53,29 +43,29 @@
                 <h2 class="work-header">Work</h2>
             <section class="work-figures">
             <figure class="figure card1">
-                <img src="./images/pexels-miguel-á-padriñán-3520692.jpg" class="work-1" alt="Someone working on Html."/><a href="https://github.com/latifah2022/my-first-portfolio">
-                <h3 class="header1">HTML</h3></a>
-                <h4 class="subheader2">html something</h4>   
+                <a href="https://latifah2022.github.io/Herison-code-rework/"><img src="./images/pexels-miguel-á-padriñán-3520692.jpg" class="work-1" alt="Someone working on Html."/></a>
+                <h3>HTML</h3>
+                <h4>Html Content</h4>   
             </figure>   
             <figure class="figure card2">
-                <img src="./images/pexels-martin-lopez-2225618.jpg" class="work-2" alt="Someone working on css."/><a href="https://www.canva.com/colors/color-palettes">
-                <h3 class="header1">Css</h3></a>
-                <h4 class="subheader2">cssss something</h4>   
+                <a href="https://github.com/latifah2022/my-first-portfolio"><img src="./images/pexels-martin-lopez-2225618.jpg" class="work-2" alt="Someone working on css."/></a>
+                <h3>Css</h3>
+                <h4>Css Content</h4>   
             </figure> 
             <figure class="figure card3">
-                <img src="./images/pexels-negative-space-97077.jpg" class="work-3" alt="Someone working on js."/><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">
-                <h3 class="header1">Java Script</h3></a>
-                <h4 class="subheader2">JSssssss something</h4>   
+                <a href="https://github.com/latifah2022/Herison-code-rework"><img src="./images/pexels-negative-space-97077.jpg" class="work-3" alt="Someone working on js."/></a>
+                <h3>Java Script</h3>
+                <h4>Java Script Content</h4>   
             </figure> 
             <figure class="figure card4">      
-                <img src="./images/pexels-tima-miroshnichenko-5380642.jpg" class="work-4" alt="Someone working on sql."/><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">
-                <h3 class="header1">SQL</h3></a>
-                <h4 class="subheader2">Sqllllllll something</h4>  
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference"><img src="./images/pexels-tima-miroshnichenko-5380642.jpg" class="work-4" alt="Someone working on sql."/></a>
+                <h3>SQL</h3>
+                <h4>SQL Content</h4>  
                 </figure>
             <figure class="figure card5">
-                <img src="./images/pexels-marcellino-andrian-671629 (1).jpg" class="work-5" alt="Someone working on Html."/><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">
-                <h3 class="header1">Python</h3></a>
-                <h4 class="subheader2">Pythonnnnnnn something</h4>    
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference"><img src="./images/pexels-marcellino-andrian-671629 (1).jpg" class="work-5" alt="Someone working on Html."/></a>
+                <h3>Python</h3>
+                <h4>Python Content</h4>    
             </figure>  
         </section>                   
         </div>
@@ -104,8 +94,5 @@
         </div>
     </section>
 
-    <footer>
-        <strong>Thank You.</strong>
-    </footer>
 </body>
 </html>
