--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
                 <h2 class="work-header">Work</h2>
             <section class="work-figures">
             <figure class="figure card1">
-                <a href="https://latifah2022.github.io/Herison-code-rework/"><img src="./images/pexels-miguel-á-padriñán-3520692.jpg" class="work-1" alt="Someone working on Html."/></a>
+                <a href="https://latifah2022.github.io/Herison-code-rework/"><img src="./images/pexels-miguel-á-padriñán-3520692.jpg" class="work-1" alt="Working on Html."/></a>
                 <h3>HTML</h3>
                 <h4>Html Content</h4>   
             </figure>   
             <figure class="figure card2">
-                <a href="https://github.com/latifah2022/my-first-portfolio"><img src="./images/pexels-martin-lopez-2225618.jpg" class="work-2" alt="Someone working on css."/></a>
+                <a href="https://github.com/latifah2022/my-first-portfolio"><img src="./images/pexels-martin-lopez-2225618.jpg" class="work-2" alt="Working on css."/></a>
                 <h3>Css</h3>
                 <h4>Css Content</h4>   
             </figure> 
             <figure class="figure card3">
-                <a href="https://github.com/latifah2022/Herison-code-rework"><img src="./images/pexels-negative-space-97077.jpg" class="work-3" alt="Someone working on js."/></a>
+                <a href="https://github.com/latifah2022/Herison-code-rework"><img src="./images/pexels-negative-space-97077.jpg" class="work-3" alt="orking on js."/></a>
                 <h3>Java Script</h3>
                 <h4>Java Script Content</h4>   
             </figure> 
             <figure class="figure card4">      
-                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference"><img src="./images/pexels-tima-miroshnichenko-5380642.jpg" class="work-4" alt="Someone working on sql."/></a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference"><img src="./images/pexels-tima-miroshnichenko-5380642.jpg" class="work-4" alt="Working on sql."/></a>
                 <h3>SQL</h3>
                 <h4>SQL Content</h4>  
                 </figure>
             <figure class="figure card5">
-                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference"><img src="./images/pexels-marcellino-andrian-671629 (1).jpg" class="work-5" alt="Someone working on Html."/></a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference"><img src="./images/pexels-marcellino-andrian-671629 (1).jpg" class="work-5" alt="Working on Html."/></a>
                 <h3>Python</h3>
                 <h4>Python Content</h4>    
             </figure>  
