--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h4>Css Content</h4>   
             </figure> 
             <figure class="figure card3">
-                <a href="https://github.com/latifah2022/Herison-code-rework"><img src="./images/pexels-negative-space-97077.jpg" class="work-3" alt="orking on js."/></a>
+                <a href="https://github.com/latifah2022/Herison-code-rework"><img src="./images/pexels-negative-space-97077.jpg" class="work-3" alt="Working on js."/></a>
                 <h3>Java Script</h3>
                 <h4>Java Script Content</h4>   
             </figure> 
@@ -73,6 +73,7 @@
         <div  class="contact">
             <h2 id="contact-header">Contact Me</h2>
             <section class="contact-C">
+                <img src="./images/HCroxNXNSPfCkjIdOr4eZu20rN8o8gRbjS5nvEqC.jpeg" class="contact-1" alt="Contact us image."/>
                 <ul>
                     <li>
                         <a href="8888888888">8888888888</a>
